# Laborit-project

./: .env.example  .gitignore  README.md  RENDER_DEPLOYMENT_STATUS.md  RENDER_DEPLOY_GUIDE.md  RENDER_QUICK_START.md  generate_api_key.sh  pyproject.toml  render.yaml  requirements.txt  test_render_deploy.sh
app/: main.py
app/api/: routes.py
app/builder/: __init__.py  response_builder.py
app/domain/: __init__.py  query.py
app/i18n/: __init__.py  catalog.py  messages_en.py  messages_pt.py
app/models/: __init__.py  customer.py  employee.py  order.py  product.py
app/orchestrator/: metadata.py  orchestrator.py  resilience.py
app/services/: data_service.py  llm_service.py  query_service.py
app/utils/: __init__.py  cache.py  circuit_breaker.py  database.py  errors.py  logger.py  metrics.py  security.py
docs/: OPERATIONS_RUNBOOK.md
tests/: test_copilot_flow.py  test_coverage_hardening_unit.py  test_health.py  test_redis_scalability.py
